# rag-ai-chat-bot-with-langchain

./: .env.example  .gitignore  Dockerfile  HANDOVER.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: analysis.py  chain.py  config.py  embeddings.py  graph.py  ingestion.py  memory.py  prompts.py  retriever.py  ui.py  vectorstore.py
scripts/: ingest_pdfs.py  query_cli.py
tests/: test_chain.py  test_graph.py  test_ingestion.py  test_retriever.py
