[project]
name = "rag-ai-chatbot"
version = "1.0.0"
description = "RAG AI Chatbot with LangChain, Ollama, and ChromaDB"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3",
    "langchain-ollama>=0.1",
    "langchain-chroma>=0.1",
    "langchain-community>=0.3",
    "langgraph>=0.2",
    "chromadb>=0.4",
    "streamlit>=1.30",
    "httpx>=0.27",
    "pypdf>=4.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
cloud = [
    "langchain-openai>=0.2",
    "langchain-pinecone>=0.2",
    "pinecone-client>=5.0",
    "openai>=1.0",
    "tiktoken>=0.7",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
